--- a/biotech.html
+++ b/biotech.html
@@ -33,24 +33,24 @@
           <li class="nav-item"><a href="alumni.html" class="nav-link">Meet Thapar Alumni</a></li>
 
           <li class="nav-item"><a href="gallery.html" class="nav-link">Gallery</a></li>
-          <!-- <li class="nav-item"><a href="faqs.html" class="nav-link">FAQ's</a></li> -->
+          <li class="nav-item"><a href="faqs.html" class="nav-link">FAQ's</a></li>
           <li class="nav-item"><a href="contact.html" class="nav-link">Help</a></li>
         </ul>
       </div>
     </div>
   </nav>
 
-<section class="hero-wrap hero-wrap-2" style="background-image: url('images/hostelm.jpg');" data-stellar-background-ratio="0.5">
-<div class="overlay"></div>
-<div class="container">
+<!-- <section class="hero-wrap hero-wrap-2" style="background-image: url('images/hostelm.jpg');" data-stellar-background-ratio="0.5"> -->
+<!-- <div class="overlay"></div> -->
+<!-- <div class="container">
 <div class="row no-gutters slider-text align-items-end">
 <div class="col-md-9 ftco-animate pb-5">
 <p class="breadcrumbs mb-2"><span class="mr-2"><a href="index.html">Home <i class="ion-ios-arrow-forward"></i></a></span> <span>Engineering Streams <i class="ion-ios-arrow-forward"></i></span></p>
-<h1 class="mb-0 bread">Biotech</h1>
+<h1 class="mb-0 bread">CSED</h1>
 </div>
 </div>
-</div>
-</section>
+</div> -->
+<!-- </section> -->
 
 
 
@@ -59,7 +59,7 @@
 
 
   <!-- team-area -->
-        <section id="team" class="team-area team-area-content p-relative pt-120 pb-120 fix">
+  <!--       <section id="team" class="team-area team-area-content p-relative pt-120 pb-120 fix">
             <div class="circal1 item-zoom-inout"></div>
             <div class="circal2 item-zoom-inout"></div>
             <div class="circal3 item-zoom-inout"></div>
@@ -69,15 +69,17 @@
                 <div class="row"  style="padding-top: 50px;">
                     <div class="col-lg-5">
                         <div class="wow fadeInLeft" data-animation="fadeInLeft" data-delay=".2s">
-                            <img src="images/biotech_head.jpg" alt="CSED">
+                            <img src="images/cse.jpg" alt="CSED">
                         </div>
                     </div>
                     <div class="col-lg-7"  style="padding-left: 50px;">
                         <div class="s-about-content pl-30 wow fadeInRight" data-animation="fadeInRight" data-delay=".2s">
-                            <h2>Prof. M. S. Reddy</h2>
-                          <span><i>Welcome to the Department of Biotechnology at Thapar Institute of Engineering & Technology (Deemed University) TIET, Patiala. Thank you for giving preference to Department of Biotechnology for shaping and enriching your Graduate, Postgraduate and PhD learning and career in Biotechnology.</p>
-                            <p>Biotechnology is a discipline that has emerged in recent times and promises to solve problems related to human health, agriculture, and industry. This concept suggests that the outcomes of science and technology are always emerged dialectically by social and technical circumstances. The multidisciplinary nature of biotechnology brings about wide applications for the betterment of human society. </p>
-                       </div>
+                            <h2>Dr. Maninder Singh</h2>
+                            <span><i>Head of Department, Department of Computer Science & Engineering</i></span>
+                            <p>Welcome to the Department of Computer Science and Engineering. I am delighted that you are showcasing your interest to know more about us, virtue being this web presence. This web-site holds information for all the stakeholders. We at Computer Science and Engineering department offer one of the best Computer Engineering undergraduate program aimed at the super-creative generation.</p>
+                            <p>We have carefully crafted our undergraduate program to offer elective focus in six major areas of Computing: High Performance Computing, Machine Learning & Data Analytics, Computer Animation and Gaming, Cyber and Information Security, Software Engineering and last but not least Mathematics and Computing. Apart from these, design projects through-out the program highlight life-long outcome based, research led teaching pedagogy. With these choices, we hope to fulfil the requirement of industry as well quench the thirst of budding professionals.</p>
+                            <p>For More Details <p><a href="http://csed.thapar.edu/" class="btn btn-primary mr-md-4 py-3 px-4">Learn more <span class="ion-ios-arrow-forward"></span></a></p></p>
+                        </div>
                     </div>
 
                 </div>
@@ -89,42 +91,34 @@
 
 
 
+ -->
 
-
-
-
-
-
-
-
-
-
-<section class="ftco-section ftco-no-pt ftco-no-pb">
+<!-- <section class="ftco-section ftco-no-pt ftco-no-pb">
 <div class="container">
 <div class="row d-flex no-gutters">
-<div class="col-md-5 d-flex">
+<div class="col-md-5 d-flex"> -->
 <!-- <div class="img img-video d-flex align-self-stretch align-items-center justify-content-center justify-content-md-center mb-4 mb-sm-0" style="background-image:url(images/about-1.jpg);">
 </div>
 </div>
 <div class="col-md-7 pl-md-5 py-md-5">
 <div class="heading-section pt-md-5">
 <h2 class="mb-4">Why Choose Us?</h2> -->
-</div>
- 
+<!-- </div> -->
+ <!-- 
 <div class="row" style="padding-top: 50px;">
 <div class="col-md-6 services-2 w-100 d-flex">
 <div class="icon d-flex align-items-center justify-content-center">
-	<span class="fal fa-users"></span>
-
-</div>
-<div class="text pl-3">
+  <span class="fal fa-users"></span>
+ -->
+<!-- </div> -->
+<!-- <div class="text pl-3">
 <h4>Great Faculty</h4>
 <p>Improve your career prospects with our master's programme and study at our newly.</p>
 </div>
 </div>
 <div class="col-md-6 services-2 w-100 d-flex">
 <div class="icon d-flex align-items-center justify-content-center">
-	<span class="fal fa-building"></span>
+  <span class="fal fa-building"></span>
 
 </div>
 <div class="text pl-3">
@@ -147,10 +141,67 @@
 </div>
 </div>
 </div>
+ -->
+<!-- </div>
+</div>
+</div>
+</section> -->
+<section class="ftco-section bg-light">
+<div class="container">
+  <!-- <div class="container"> -->
+    <!-- <div class="row no-gutters slider-text align-items-end"> -->
+    <!-- <div class="col-md-9 ftco-animate pb-5"> -->
+    <!-- <p class="breadcrumbs mb-2"><span class="mr-2"><a href="index.html">Home <i class="ion-ios-arrow-forward"></i></a></span> <span>Engineering Streams <i class="ion-ios-arrow-forward"></i></span></p> -->
+    <h1 class="mb-0 bread">CSED</h1>
+    <!-- </div> -->
+    <!-- </div> -->
+    <!-- </div> -->
+<div class="row justify-content-center pb-5 mb-3">
+<div class="col-md-7 heading-section text-center ftco-animate">
+<h2 style="padding-left:200px;">Connect With Us</h2>
+</div>
+</div>
+<div class="row">
+<div class="col-md-4 ftco-animate">
+<div class="block-7">
+<div class="img" style="background-image: url(images/dipto.jpeg);"></div>
+<div class="text-center p-4">
+<span class="excerpt d-block"style="text-align: center;">Mr Dipto Barman</span>
+
+<a href="https://tiet.zoom.us/my/diptobarman" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Zoom Link</a>
+</div>
+</div>
+</div>
+<div class="col-md-4 ftco-animate">
+<div class="block-7">
+<div class="img" style="background-image: url(images/dipto.jpeg);"></div>
+<div class="text-center p-4">
+<span class="excerpt d-block" style="text-align: center;">Mr Dipto Barman</span>
+
+<a href="https://tiet.zoom.us/my/diptobarman" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Zoom Link</a>
+</div>
+</div>
+</div>
+<div class="col-md-4 ftco-animate">
+<div class="block-7">
+<div class="img" style="background-image: url(images/dipto.jpeg);"></div>
+<div class="text-center p-4">
+<span class="excerpt d-block"style="text-align: center;">Mr Dipto Barman</span>
+
+<a href="https://tiet.zoom.us/my/diptobarman" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Zoom Link</a>
+</div>
+</div>
 </div>
 </div>
 </div>
 </section>
+
+<div style="padding-bottom:100px; margin-left:500px; margin-right:500px;">
+<a href="http://btd.thapar.edu/" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-home" style="padding: 10px;"></span>For More Info</a>
+  
+</div>
+
+
 
 
 
