--- a/alumni.html
+++ b/alumni.html
@@ -65,7 +65,8 @@
 <div class="faded">
 <p>Vice president, marketing, Reltio. <br> Worked in organizations like Samtel, Honda Motors in India and Amdocs, Oracle, Veeva Systems in the US</p>
 <p style="font-weight: bold;">DATE:   </p>
-<p style="font-weight: bold;">TIME:   </p>
+<p style="font-weight: bold;">TIME:12:00-1:00 PM</p>
+<br>
 <a href="#" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Zoom Link</a>
 <ul class="ftco-social text-center">
 <li class="ftco-animate"><a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-twitter"></span></a></li>
@@ -89,7 +90,7 @@
 <p>Managing Director, Crystal Sanitary Fittings Pvt.Ltd.(ARK)</p>
 <br><br><br>
 <p style="font-weight: bold;">DATE:   </p>
-<p style="font-weight: bold;">TIME:   </p>
+<p style="font-weight: bold;">TIME:10:00-11:00 AM ; 3:00-4:00 PM  </p>
 <a href="#" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Zoom Link</a>
 
 <ul class="ftco-social text-center">
@@ -116,7 +117,7 @@
   ME, Mechanical, BITS-Pilani</p>
   <br>
   <p style="font-weight: bold;">DATE:   </p>
-<p style="font-weight: bold;">TIME:   </p>
+<p style="font-weight: bold;">TIME:10:00-11:00 AM; 1:00-2:00 PM   </p>
 <a href="#" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Zoom Link</a>
 <ul class="ftco-social text-center">
 <li class="ftco-animate"><a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-twitter"></span></a></li>
@@ -140,7 +141,7 @@
 <p>Executive Engineer, DWSS, Punjab. Site Engineer, Siel Chemical Complex</p>
 <br><br><br>
 <p style="font-weight: bold;">DATE:   </p>
-<p style="font-weight: bold;">TIME:   </p>
+<p style="font-weight: bold;">TIME:11:00-12:00 PM; 3::-4:00 PM   </p>
 <a href="#" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Zoom Link</a>
 <ul class="ftco-social text-center">
 <li class="ftco-animate"><a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-twitter"></span></a></li>
@@ -165,7 +166,7 @@
   Current designation: Self-employed
   Past designations and organizations: MT at EIL, AM at Punwire, TL at NIIT Ltd</p>
   <p style="font-weight: bold;">DATE:   </p>
-<p style="font-weight: bold;">TIME:   </p>
+<p style="font-weight: bold;">TIME:11:00-12:00 PM ; 2:00-3:00 PM   </p>
 <a href="#" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Zoom Link</a>
 <ul class="ftco-social text-center">
 <li class="ftco-animate"><a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-twitter"></span></a></li>
@@ -193,7 +194,7 @@ Chief Technology Officer, Tata Communications Lanka Ltd
 </p>
 <br>
 <p style="font-weight: bold;">DATE:   </p>
-<p style="font-weight: bold;">TIME:   </p>
+<p style="font-weight: bold;">TIME:11:00-12:00 PM; 2:00-3:00 PM  </p>
 <a href="#" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Zoom Link</a>
 <ul class="ftco-social text-center">
 <li class="ftco-animate"><a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-twitter"></span></a></li>
@@ -218,7 +219,7 @@ Chief Technology Officer, Tata Communications Lanka Ltd
   Past designations and organizations : Delphi, Honeywell and IBM</p>
   <br>
   <p style="font-weight: bold;">DATE:   </p>
-<p style="font-weight: bold;">TIME:   </p>
+<p style="font-weight: bold;">TIME: 11:00-12:00 PM; 4:00-5:00 PM  </p>
 <a href="#" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Zoom Link</a>
 <ul class="ftco-social text-center">
 <li class="ftco-animate"><a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-twitter"></span></a></li>
@@ -243,7 +244,7 @@ Chief Technology Officer, Tata Communications Lanka Ltd
 Workday
 Salesforce , Cisco, Sun Microsystems, Silicon Graphics , CMC Ltd</p>
 <p style="font-weight: bold;">DATE:   </p>
-<p style="font-weight: bold;">TIME:   </p>
+<p style="font-weight: bold;">TIME:10:00-11:00 AM; 12:00-1:00 PM;2:00-3:00 PM  </p>
 <a href="#" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Zoom Link</a>
 <ul class="ftco-social text-center">
 <li class="ftco-animate"><a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-twitter"></span></a></li>
@@ -268,7 +269,7 @@ Salesforce , Cisco, Sun Microsystems, Silicon Graphics , CMC Ltd</p>
 <p>Director of Sales and Marketing, Great Wall Motor</p>
 <br>
 <p style="font-weight: bold;">DATE:   </p>
-<p style="font-weight: bold;">TIME:   </p>
+<p style="font-weight: bold;">TIME:10:00-11:00 AM; 4:00-5:00 PM    </p>
 <a href="#" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Zoom Link</a>
 
 <ul class="ftco-social text-center">
@@ -294,7 +295,7 @@ Salesforce , Cisco, Sun Microsystems, Silicon Graphics , CMC Ltd</p>
 Bank of America, Hong Kong 
 Deutsche Bank</p>
 <p style="font-weight: bold;">DATE:   </p>
-<p style="font-weight: bold;">TIME:   </p>
+<p style="font-weight: bold;">TIME:10:00-11:00 AM; 1:00-2:00 PM   </p>
 <a href="#" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Zoom Link</a>
 
 <ul class="ftco-social text-center">
@@ -318,40 +319,61 @@ Deutsche Bank</p>
     <tr>
       <th scope="col" style="color:white">Time</th>
       <th scope="col"style="color:white">Department</th>
-      <th scope="col"style="color:white">Alumni</th>
+      <th scope="col"style="color:white">Panel Members</th>
+
       <th scope="col"style="color:white">Link</th>
+      <th scope="col"style="color:white">Moderator</th>
     </tr>
   </thead>
   <tbody>
     <tr>
-      <th scope="row">11:30-12:30</th>
-      <td>Computer Science + MCA</td>
-      <td>TBD</td>
+      <th scope="row">10:00-11:00 AM</th>
+      <td>All  - First cum first serve</td>
+      <td>Rachna, Gauri, Hardeep, Param Tind, Ajay Sharma </td>
       <td>@mdo</td>
+       <td>Hardeep</td>
     </tr>
     <tr>
-      <th scope="row">12:30-1:30</th>
+      <th scope="row">11:00-12:00 PM</th>
+      <td>All  - First cum first serve</td>
+      <td>Jyotsna, Jagatbir, Ajay Kumar, Chaman, Manoj</td>
+      <td>@mdo</td>
+       <td>Jagatbir</td>
+    </tr>
+    <tr>
+      <th scope="row">12:00-1:00 PM</th>
+      <td>Computer Science + MCA</td>
+      <td>Ajay Khanna, Rachna</td>
+      <td>@mdo</td>
+       <td>Mansi</td>
+    </tr>
+    <tr>
+      <th scope="row">1:00-2:00 PM</th>
       <td>Mechanical</td>
-      <td>Ajay Sharma, Ajay Khanna, Jagat Saluja</td>
+      <td>Ajay Sharma, Param Thind</td>
       <td>@fat</td>
+       <td>Mansi</td>
     </tr>
     <tr>
-      <th scope="row">1:30-2:30</th>
-      <td>Electronics Electrical Instrumentation</td>
-      <td>Rachna,Jyotsna, Chaman</td>
+      <th scope="row">2:00-3:00 PM</th>
+      <td>Electronics ,Electrical, Instrumentation</td>
+      <td>Rachna, Jyotsna, Chaman</td>
       <td>@twitter</td>
+       <td>Mansi</td>
     </tr>
     <tr>
-      <th scope="row">2:30-3:30</th>
+      <th scope="row">3:00-4:00 PM</th>
       <td>Civil</td>
-      <td>Gauri,Manoj</td>
+      <td>Gauri, Manoj, Gagan</td>
       <td>@twitter</td>
+       <td>Mansi</td>
     </tr>
     <tr>
-      <th scope="row">3:30-4:30</th>
+      <th scope="row">4:00-5:00 PM</th>
       <td>MBA+Liberal Arts+Masters and Others</td>
-      <td>Parampreet Thind, Hardeep Brar</td>
+      <td>Jagatbir Saluja, Hardeep Brar</td>
       <td>@twitter</td>
+       <td>Mansi</td>
     </tr>
   </tbody>
 </table>
