--- a/index.html
+++ b/index.html
@@ -73,10 +73,10 @@
 </div>
 <div class="media-body">
 <h3 class="heading">Thapar Alumni</h3>
-<p style="font-weight: bold;">MEET OUR ALUMNI</p>
-<p >at prestigious places</p>
+<p style="font-weight: bold;">ATTEND SESSIONS BY OUR ALUMNI</p>
+
 <p><a href="alumni.html" class="btn btn-primary mr-md-3 py-3 px-4" style="margin-top:55px;">Sessions by Alumni <span class="ion-ios-arrow-forward"></span></a></p>
-<a href="vet.html" class="btn-custom d-flex align-items-center justify-content-center"><span class="fa fa-chevron-right"></span><i class="sr-only">Read more</i></a>
+<a href="alumni.html" class="btn-custom d-flex align-items-center justify-content-center"><span class="fa fa-chevron-right"></span><i class="sr-only">Read more</i></a>
 </div>
 </div>
 </div>
@@ -102,11 +102,11 @@
 <img src="images/faq.png"style="width:100%;">
 </div>
 <div class="media-body">
-<h3 class="heading">FAQ's</h3>
-<p style="font-weight: bold;">FREQUENTLY ASKED QUESTIONS</p>
+<h3 class="heading">HELP DESK</h3>
+<p style="font-weight: bold;">WE ARE HERE TO HELP YOU</p>
 <p >Have any doubts regarding the courses?</p>
-<p><a href="faqs.html" class="btn btn-primary mr-md-4 py-3 px-4">Contact Help Desk<span class="ion-ios-arrow-forward"></span></a></p>
-<a href="pricing.html" class="btn-custom d-flex align-items-center justify-content-center"><span class="fa fa-chevron-right"></span><i class="sr-only">Read more</i></a>
+<p><a href="contact.html" class="btn btn-primary mr-md-4 py-3 px-4">Contact Help Desk<span class="ion-ios-arrow-forward"></span></a></p>
+<a href="contact.html" class="btn-custom d-flex align-items-center justify-content-center"><span class="fa fa-chevron-right"></span><i class="sr-only">Read more</i></a>
 </div>
 </div>
 </div>
