--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 <div class="col-md-3 d-flex align-self-stretch px-4 ftco-animate">
 <div class="d-block services text-center">
 <div class="icon d-flex align-items-center justify-content-center">
-<img src="images/faq.png"style="width:100%;">
+<img src="images/help.png"style="width:140%;">
 </div>
 <div class="media-body">
 <h3 class="heading">HELP DESK</h3>
