--- a/alumni.html
+++ b/alumni.html
@@ -46,7 +46,7 @@
 <!-- <div class="row no-gutters slider-text align-items-end"> -->
 <!-- <div class="col-md-9 ftco-animate pb-5"> -->
 <!-- <p class="breadcrumbs mb-2"><span class="mr-2"><a href="index.html">Home <i class="ion-ios-arrow-forward"></i></a></span> <span>Alumni <i class="ion-ios-arrow-forward"></i></span></p> -->
-<h1 class="mb-0 bread">Interact with some of the thapar alumni</h1>
+<h1 class="mb-0 bread">Interact with some of<br>the Thapar Alumni</h1>
 <!-- </div> -->
 <!-- </div> -->
 </div>
@@ -61,7 +61,7 @@
 </div>
 <div class="text pt-3 px-3 pb-4 text-center">
 <h3>Ajay Khanna</h3>
-<span class="position mb-2">1994,Mechanical Engineer</span>
+<span class="position mb-2">1994, Mechanical Engineer</span>
 <div class="faded">
 <p>Vice president, marketing, Reltio. <br> Worked in organizations like Samtel, Honda Motors in India and Amdocs, Oracle, Veeva Systems in the US</p>
 <p style="font-weight: bold;">DATE:   </p>
@@ -85,7 +85,7 @@
 </div>
 <div class="text pt-3 px-3 pb-4 text-center">
 <h3>Gauri Singh Shandilaya</h3>
-<span class="position mb-2">1994,Civil Engineer</span>
+<span class="position mb-2">1994, Civil Engineer</span>
 <div class="faded">
 <p>Managing Director, Crystal Sanitary Fittings Pvt.Ltd.(ARK)</p>
 <br><br><br>
@@ -136,7 +136,7 @@
 </div>
 <div class="text pt-3 px-3 pb-4 text-center">
 <h3>Manoj Malhotra</h3>
-<span class="position mb-2">1994 ,Civil Engineer </span>
+<span class="position mb-2">1994, Civil Engineer </span>
 <div class="faded">
 <p>Executive Engineer, DWSS, Punjab. Site Engineer, Siel Chemical Complex</p>
 <br><br><br>
@@ -160,7 +160,7 @@
 </div>
 <div class="text pt-3 px-3 pb-4 text-center">
  <h3>Jyotsna Gupta Saxena </h3>
-<span class="position mb-2">1994 ,Electronics (Instrumentation and Control) Engineer</span>
+<span class="position mb-2">1994, Electronics (Instrumentation and Control) Engineer</span>
 <div class="faded">
 <p>
   Current designation: Self-employed
@@ -238,7 +238,7 @@ Chief Technology Officer, Tata Communications Lanka Ltd
 </div>
 <div class="text pt-3 px-3 pb-4 text-center">
 <h3>Rachna Mahajan</h3>
-<span class="position mb-2">1994,Electronics and Electrical Communication </span>
+<span class="position mb-2">1994, Electronics and Electrical Communication </span>
 <div class="faded">
 <p>Director , Product and Technology Programs 
 Workday
