--- a/index.html
+++ b/index.html
@@ -14,7 +14,17 @@
 <link rel="stylesheet" href="css/jquery.timepicker.css">
 <link rel="stylesheet" href="css/flaticon.css">
 <link rel="stylesheet" href="css/style.css">
+
+
+
+
 <link rel="icon" type="image/png" href="images/logo/logo.png"/>
+
+<!-- VIDEO -->
+<!-- <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet">
+<link href="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.0.0/magnific-popup.min.css" rel="stylesheet">
+ -->
+
 </head>
 <body>
 
@@ -75,7 +85,7 @@
 <h3 class="heading">Thapar Alumni</h3>
 <p style="font-weight: bold;">ATTEND SESSIONS BY OUR ALUMNI</p>
 
-<p><a href="alumni.html" class="btn btn-primary mr-md-3 py-3 px-4" style="margin-top:55px;">Sessions by Alumni <span class="ion-ios-arrow-forward"></span></a></p>
+<p><a href="alumni.html" class="btn btn-primary mr-md-3 py-3 px-4" style="margin-top:65px;">Sessions by Alumni <span class="ion-ios-arrow-forward"></span></a></p>
 <a href="alumni.html" class="btn-custom d-flex align-items-center justify-content-center"><span class="fa fa-chevron-right"></span><i class="sr-only">Read more</i></a>
 </div>
 </div>
@@ -114,6 +124,26 @@
 </div>
 </div>
 </section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 <section class="ftco-counter" id="section-counter">
 <div class="container">
@@ -444,5 +474,21 @@ Copyright &copy;<script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/clou
   gtag('config', 'UA-23581568-13');
 </script>
 <script src="https://ajax.cloudflare.com/cdn-cgi/scripts/7089c43e/cloudflare-static/rocket-loader.min.js" data-cf-settings="7fcabe0204b65ee20594bff5-|49" defer=""></script><script defer src="https://static.cloudflareinsights.com/beacon.min.js" data-cf-beacon='{"rayId":"5d06b9d2add2017a","version":"2020.9.0","si":10}'></script>
+
+<!-- VIDEO -->
+<!-- <script type="text/javascript">
+	$(".popup").click(function () {
+    var $this = $(this);
+    var $iframe = $("<iframe>").attr("src", $this.data("link")).css({"width": 400, "height": 300});
+    var $title = $("<h1>").text($this.data("title"));
+    $("#video-view").html($title).append($iframe);
+    $iframe.wrap("<div class='class-video'>");
+});
+</script>
+ -->
+
+
+
+
 </body>
 </html>
