--- a/streams.html
+++ b/streams.html
@@ -228,7 +228,7 @@
               <h3 class="heading">Basic & Engineering Sciences</h3>
               <p>
 
-                >Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the
+                Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the
                 blind texts. Separated they live in Bookmarksgrove right.</p>
               <a href="#" class="btn-custom d-flex align-items-center justify-content-center"><span
                   class="fa fa-chevron-right"></span><i class="sr-only">Read more</i></a>
