--- a/alumni.html
+++ b/alumni.html
@@ -64,8 +64,9 @@
 <span class="position mb-2">1994, Mechanical Engineer</span>
 <div class="faded">
 <p>Vice president, marketing, Reltio. <br> Worked in organizations like Samtel, Honda Motors in India and Amdocs, Oracle, Veeva Systems in the US</p>
+<p>Alumunus Santa Clara University</p>
 <p style="font-weight: bold;">DATE:   </p>
-<p style="font-weight: bold;">TIME:12:00-1:00 PM</p>
+<p style="font-weight: bold;">TIME: <span style="color:#640000">12:00-1:00 PM</span></p>
 <br>
 <a href="#" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Zoom Link</a>
 <ul class="ftco-social text-center">
@@ -88,9 +89,9 @@
 <span class="position mb-2">1994, Civil Engineer</span>
 <div class="faded">
 <p>Managing Director, Crystal Sanitary Fittings Pvt.Ltd.(ARK)</p>
-<br><br><br>
+<br><br><br><br><br><br>
 <p style="font-weight: bold;">DATE:   </p>
-<p style="font-weight: bold;">TIME:10:00-11:00 AM ; 3:00-4:00 PM  </p>
+<p style="font-weight: bold;">TIME:<span style="color:#640000"> 10:00-11:00 AM ; 3:00-4:00 PM </span> </p>
 <a href="#" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Zoom Link</a>
 
 <ul class="ftco-social text-center">
@@ -115,9 +116,11 @@
 <p>General Manager, Design Centre, Tata Motors  Maruti-Suzuki India  Daewoo Motors India  
   M.Des., IIT-Delhi
   ME, Mechanical, BITS-Pilani</p>
+  <p>Alumnus IIT Delhi & BITS Pilani</p>
   <br>
+  
   <p style="font-weight: bold;">DATE:   </p>
-<p style="font-weight: bold;">TIME:10:00-11:00 AM; 1:00-2:00 PM   </p>
+<p style="font-weight: bold;">TIME: <span style="color:#640000"> 10:00-11:00 AM; 1:00-2:00 PM </span>  </p>
 <a href="#" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Zoom Link</a>
 <ul class="ftco-social text-center">
 <li class="ftco-animate"><a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-twitter"></span></a></li>
@@ -139,9 +142,10 @@
 <span class="position mb-2">1994, Civil Engineer </span>
 <div class="faded">
 <p>Executive Engineer, DWSS, Punjab. Site Engineer, Siel Chemical Complex</p>
+<p>ME Structures from PEC Chandigarh</p>
 <br><br><br>
 <p style="font-weight: bold;">DATE:   </p>
-<p style="font-weight: bold;">TIME:11:00-12:00 PM; 3::-4:00 PM   </p>
+<p style="font-weight: bold;">TIME: <span style="color:#640000"> 11:00-12:00 PM; 3:00-4:00 PM </span>  </p>
 <a href="#" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Zoom Link</a>
 <ul class="ftco-social text-center">
 <li class="ftco-animate"><a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-twitter"></span></a></li>
@@ -165,8 +169,9 @@
 <p>
   Current designation: Self-employed
   Past designations and organizations: MT at EIL, AM at Punwire, TL at NIIT Ltd</p>
+  <br>
   <p style="font-weight: bold;">DATE:   </p>
-<p style="font-weight: bold;">TIME:11:00-12:00 PM ; 2:00-3:00 PM   </p>
+<p style="font-weight: bold;">TIME: <span style="color:#640000"> 11:00-12:00 PM ; 2:00-3:00 PM  </span> </p>
 <a href="#" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Zoom Link</a>
 <ul class="ftco-social text-center">
 <li class="ftco-animate"><a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-twitter"></span></a></li>
@@ -192,9 +197,10 @@ Chief Technology Officer, Tata Communications Lanka Ltd
   Past: VSNL
   ePGP IIM Kozhikode
 </p>
-<br>
+<p>Alumnus IIM Kozhikode</p>
+
 <p style="font-weight: bold;">DATE:   </p>
-<p style="font-weight: bold;">TIME:11:00-12:00 PM; 2:00-3:00 PM  </p>
+<p style="font-weight: bold;">TIME: <span style="color:#640000"> 11:00-12:00 PM; 2:00-3:00 PM </span>  </p>
 <a href="#" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Zoom Link</a>
 <ul class="ftco-social text-center">
 <li class="ftco-animate"><a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-twitter"></span></a></li>
@@ -217,9 +223,10 @@ Chief Technology Officer, Tata Communications Lanka Ltd
 <div class="faded">
 <p>Corporate Vice President, WNS Global Services
   Past designations and organizations : Delphi, Honeywell and IBM</p>
-  <br>
+  <p>Alumnus eCornell University</p>
+
   <p style="font-weight: bold;">DATE:   </p>
-<p style="font-weight: bold;">TIME: 11:00-12:00 PM; 4:00-5:00 PM  </p>
+<p style="font-weight: bold;">TIME: <span style="color:#640000"> 11:00-12:00 PM; 4:00-5:00 PM </span> </p>
 <a href="#" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Zoom Link</a>
 <ul class="ftco-social text-center">
 <li class="ftco-animate"><a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-twitter"></span></a></li>
@@ -243,8 +250,9 @@ Chief Technology Officer, Tata Communications Lanka Ltd
 <p>Director , Product and Technology Programs 
 Workday
 Salesforce , Cisco, Sun Microsystems, Silicon Graphics , CMC Ltd</p>
+<br>
 <p style="font-weight: bold;">DATE:   </p>
-<p style="font-weight: bold;">TIME:10:00-11:00 AM; 12:00-1:00 PM;2:00-3:00 PM  </p>
+<p style="font-weight: bold;">TIME: <span style="color:#640000"> 10:00-11:00 AM; 12:00-1:00 PM;2:00-3:00 PM </span>  </p>
 <a href="#" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Zoom Link</a>
 <ul class="ftco-social text-center">
 <li class="ftco-animate"><a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-twitter"></span></a></li>
@@ -267,9 +275,10 @@ Salesforce , Cisco, Sun Microsystems, Silicon Graphics , CMC Ltd</p>
 
 <div class="faded">
 <p>Director of Sales and Marketing, Great Wall Motor</p>
-<br>
+<p>Alumnus Harvard Business School</p>
+
 <p style="font-weight: bold;">DATE:   </p>
-<p style="font-weight: bold;">TIME:10:00-11:00 AM; 4:00-5:00 PM    </p>
+<p style="font-weight: bold;">TIME: <span style="color:#640000"> 10:00-11:00 AM; 4:00-5:00 PM  </span>  </p>
 <a href="#" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Zoom Link</a>
 
 <ul class="ftco-social text-center">
@@ -294,8 +303,9 @@ Salesforce , Cisco, Sun Microsystems, Silicon Graphics , CMC Ltd</p>
 <p>Director, Global Transaction Services 
 Bank of America, Hong Kong 
 Deutsche Bank</p>
+<p>Alumnus IIM Bangalore</p>
 <p style="font-weight: bold;">DATE:   </p>
-<p style="font-weight: bold;">TIME:10:00-11:00 AM; 1:00-2:00 PM   </p>
+<p style="font-weight: bold;">TIME: <span style="color:#640000"> 10:00-11:00 AM; 1:00-2:00 PM </span>  </p>
 <a href="#" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Zoom Link</a>
 
 <ul class="ftco-social text-center">
