--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 <h3 class="heading">Explore Thapar</h3>
 <p style="font-weight: bold;">Introductory Video</p>
 <p ></p>
-<p><a href="faqs.html" class="btn btn-primary mr-md-4 py-3 px-4" style="margin-top: 90px;">Contact Help Desk<span class="ion-ios-arrow-forward"></span></a></p>
+<p><a href="faqs.html" class="btn btn-primary mr-md-4 py-3 px-4" style="margin-top: 90px;">Watch Video<span class="ion-ios-arrow-forward"></span></a></p>
 <a href="pricing.html" class="btn-custom d-flex align-items-center justify-content-center"><span class="fa fa-chevron-right"></span><i class="sr-only">Read more</i></a>
 </div>
 </div>
