--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 <div class="col-md-3 d-flex align-self-stretch px-4 ftco-animate">
 <div class="d-block services text-center">
 <div class="icon d-flex align-items-center justify-content-center">
-<img src="images/explore.png"style="width:100%;">
+<img src="images/explore1.png"style="width:80%;">
 </div>
 <div class="media-body">
 <h3 class="heading">Explore Thapar</h3>
