--- a/placement.html
+++ b/placement.html
@@ -153,7 +153,7 @@
     <!-- <div class="row no-gutters slider-text align-items-end"> -->
     <!-- <div class="col-md-9 ftco-animate pb-5"> -->
     <!-- <p class="breadcrumbs mb-2"><span class="mr-2"><a href="index.html">Home <i class="ion-ios-arrow-forward"></i></a></span> <span>Engineering Streams <i class="ion-ios-arrow-forward"></i></span></p> -->
-    <h1 class="mb-0 bread">CSED</h1>
+    <h1 class="mb-0 bread">PLACEMENT CELL</h1>
     <!-- </div> -->
     <!-- </div> -->
     <!-- </div> -->
@@ -163,42 +163,41 @@
 </div>
 </div>
 <div class="row">
-<div class="col-md-4 ftco-animate">
+<div class="col-md-4 ftco-animate"style="-webkit-box-flex: 0;
+    -ms-flex: 0 0 50%;
+    flex: 0 0 50%;
+    max-width: 50%;">
 <div class="block-7">
-<div class="img" style="background-image: url(images/dipto.jpeg);"></div>
+<div class="img" style="background-image: url(images/bawa.jpg);height:550px;"></div>
 <div class="text-center p-4">
-<span class="excerpt d-block"style="text-align: center;">Mr Dipto Barman</span>
+<span class="excerpt d-block"style="text-align: center">Mr H.S. BAWA</span>
+<!--<p style="text-align: center;">Head - Training & Placement deptt. </p>-->
 
-<a href="https://tiet.zoom.us/my/diptobarman" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Zoom Link</a>
+<a href="https://www.linkedin.com/in/h-s-bawa-38524332/?originalSubdomain=in" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-linkedin" style="padding: 10px;"></span>CONNECT</a>
 </div>
 </div>
 </div>
-<div class="col-md-4 ftco-animate">
+
+<div class="col-md-4 ftco-animate" style="-webkit-box-flex: 0;
+    -ms-flex: 0 0 50%;
+    flex: 0 0 50%;
+    max-width: 50%;">
 <div class="block-7">
-<div class="img" style="background-image: url(images/dipto.jpeg);"></div>
+<div class="img" style="background-image: url(images/dipto.jpeg);height:550px;"></div>
 <div class="text-center p-4">
-<span class="excerpt d-block" style="text-align: center;">Mr Dipto Barman</span>
+<span class="excerpt d-block"style="text-align: center;">Mr RITURAAJ JUNEJA</span>
 
-<a href="https://tiet.zoom.us/my/diptobarman" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Zoom Link</a>
+<a href="https://www.linkedin.com/in/h-s-bawa-38524332/?originalSubdomain=in" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-linkedin" style="padding: 10px;"></span>CONNECT</a>
 </div>
 </div>
 </div>
-<div class="col-md-4 ftco-animate">
-<div class="block-7">
-<div class="img" style="background-image: url(images/dipto.jpeg);"></div>
-<div class="text-center p-4">
-<span class="excerpt d-block"style="text-align: center;">Mr Dipto Barman</span>
 
-<a href="https://tiet.zoom.us/my/diptobarman" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Zoom Link</a>
-</div>
-</div>
-</div>
 </div>
 </div>
 </section>
 
 <div style="padding-bottom:100px; margin-left:500px; margin-right:500px;">
-<a href="http://csed.thapar.edu/" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-home" style="padding: 10px;"></span>For More Info</a>
+<a href="http://thapar.edu/placements" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-home" style="padding: 10px;"></span>For More Info</a>
 	
 </div>
 
