--- a/faqs.html
+++ b/faqs.html
@@ -31,6 +31,8 @@
           <li class="nav-item"><a href="streams.html" class="nav-link">Engineering Streams</a></li>
 
           <li class="nav-item"><a href="alumni.html" class="nav-link">Meet Thapar Alumni</a></li>
+          <li class="nav-item"><a href="placement.html" class="nav-link">Placements</a></li>
+
 
           <li class="nav-item"><a href="gallery.html" class="nav-link">Gallery</a></li>
           <!-- <li class="nav-item active"><a href="faqs.html" class="nav-link">FAQ's</a></li> -->
