--- a/placement.html
+++ b/placement.html
@@ -171,7 +171,7 @@
 <div class="img" style="background-image: url(images/bawa.jpg);height:550px;"></div>
 <div class="text-center p-4">
 <span class="excerpt d-block"style="text-align: center">Mr H.S. BAWA</span>
-<!--<p style="text-align: center;">Head - Training & Placement deptt. </p>-->
+<p style="text-align: center;">Head - Training & Placement deptt. </p>
 
 <a href="https://www.linkedin.com/in/h-s-bawa-38524332/?originalSubdomain=in" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-linkedin" style="padding: 10px;"></span>CONNECT</a>
 </div>
@@ -183,11 +183,12 @@
     flex: 0 0 50%;
     max-width: 50%;">
 <div class="block-7">
-<div class="img" style="background-image: url(images/dipto.jpeg);height:550px;"></div>
+<div class="img" style="background-image: url(images/juneja.jpg);height:550px;"></div>
 <div class="text-center p-4">
 <span class="excerpt d-block"style="text-align: center;">Mr RITURAAJ JUNEJA</span>
+<p style="text-align: center;">CIEO at Thapar University </p>
 
-<a href="https://www.linkedin.com/in/h-s-bawa-38524332/?originalSubdomain=in" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-linkedin" style="padding: 10px;"></span>CONNECT</a>
+<a href="https://www.linkedin.com/in/rituraaj/" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-linkedin" style="padding: 10px;"></span>CONNECT</a>
 </div>
 </div>
 </div>
