--- a/placement.html
+++ b/placement.html
@@ -34,8 +34,8 @@
            <li class="nav-item"><a href="placement.html" class="nav-link">Placements</a></li>
 
           <li class="nav-item"><a href="gallery.html" class="nav-link">Gallery</a></li>
-          <li class="nav-item"><a href="faqs.html" class="nav-link">FAQ's</a></li>
-          <li class="nav-item"><a href="contact.html" class="nav-link">Help</a></li>
+          <!-- <li class="nav-item"><a href="faqs.html" class="nav-link">FAQ's</a></li> -->
+          <!-- <li class="nav-item"><a href="contact.html" class="nav-link">Help</a></li> -->
         </ul>
       </div>
     </div>
