--- a/gallery.html
+++ b/gallery.html
@@ -36,7 +36,7 @@
 
           <li class="nav-item active"><a href="gallery.html" class="nav-link">Gallery</a></li>
           <!-- <li class="nav-item"><a href="faqs.html" class="nav-link">FAQ's</a></li> -->
-          <li class="nav-item"><a href="contact.html" class="nav-link">Help</a></li>
+          <!-- <li class="nav-item"><a href="contact.html" class="nav-link">Help</a></li> -->
         </ul>
       </div>
     </div>
