--- a/streams.html
+++ b/streams.html
@@ -39,25 +39,25 @@
 
           <li class="nav-item"><a href="gallery.html" class="nav-link">Gallery</a></li>
           <!-- <li class="nav-item"><a href="faqs.html" class="nav-link">FAQ's</a></li> -->
-          <li class="nav-item"><a href="contact.html" class="nav-link">Help</a></li>
+          <!-- <li class="nav-item"><a href="contact.html" class="nav-link">Help</a></li> -->
         </ul>
       </div>
     </div>
   </nav>
 
   <!-- <section class="hero-wrap hero-wrap-2" style="background-image: url('images/hostelm.jpg');" -->
-    <!-- data-stellar-background-ratio="0.5"> -->
-    <!-- <div class="overlay"></div> -->
-    <div class="container">
-      <!-- <div class="row no-gutters slider-text align-items-end"> -->
-        <!-- <div class="col-md-9 ftco-animate pb-5"> -->
-          <!-- <p class="breadcrumbs mb-2"><span class="mr-2"><a href="index.html">Home <i -->
-                  <!-- class="ion-ios-arrow-forward"></i></a></span> <span>Engineering Streams <i -->
-                <!-- class="ion-ios-arrow-forward"></i></span></p> -->
-          <h1 class="mb-0 bread">Engineering Streams</h1>
-        <!-- </div> -->
-      <!-- </div> -->
-    </div>
+  <!-- data-stellar-background-ratio="0.5"> -->
+  <!-- <div class="overlay"></div> -->
+  <div class="container">
+    <!-- <div class="row no-gutters slider-text align-items-end"> -->
+    <!-- <div class="col-md-9 ftco-animate pb-5"> -->
+    <!-- <p class="breadcrumbs mb-2"><span class="mr-2"><a href="index.html">Home <i -->
+    <!-- class="ion-ios-arrow-forward"></i></a></span> <span>Engineering Streams <i -->
+    <!-- class="ion-ios-arrow-forward"></i></span></p> -->
+    <h1 class="mb-0 bread">Engineering Streams</h1>
+    <!-- </div> -->
+    <!-- </div> -->
+  </div>
   <!-- </section> -->
   <!-- <section class="ftco-section ftco-no-pt ftco-no-pb">
     <div class="container">
@@ -68,7 +68,7 @@
             style="background-image:url(images/about-1.jpg);">
           </div>
         </div> -->
-        <!-- <div class="col-md-7 pl-md-5 py-md-5">
+  <!-- <div class="col-md-7 pl-md-5 py-md-5">
 <div class="heading-section pt-md-5">
 <h2 class="mb-4">Why Choose Us?</h2>
 </div>
@@ -105,7 +105,7 @@
 </div>
 </div>
  -->
-      <!-- </div>
+  <!-- </div>
   </section> -->
   <section class="ftco-section bg-light">
     <div class="container">
@@ -206,7 +206,7 @@
 
 
 
-      <div class="row mt-5 pt-4" >
+      <div class="row mt-5 pt-4">
         <div class="col-md-4 d-flex align-self-stretch px-4 ftco-animate" style="margin-top: 70px;">
           <div class="d-block services text-center">
             <div class="icon d-flex align-items-center justify-content-center">
@@ -221,7 +221,7 @@
             </div>
           </div>
         </div>
-        
+
         <!-- <div class="col-md-4 d-flex align-self-stretch px-4 ftco-animate">
 <div class="d-block services text-center">
 <div class="icon d-flex align-items-center justify-content-center">
@@ -237,78 +237,98 @@
 </div>
  -->
       </div>
-</div></section>
-<footer class="footer">
-<div class="container">
-<div class="row">
-<div class="col-md-6 col-lg-3 mb-4 mb-md-0">
-<h2 class="footer-heading">Thapar Unversity</h2>
-<p>The Thapar Institute of Engineering and Technology (TIET) is one of India's oldest and finest educational institutions, which provides a steady source of highly skilled talent to the nation as well as overseas.</p>
-<ul class="ftco-footer-social p-0">
-<li class="ftco-animate"><a href="https://twitter.com/TIETofficial?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor" data-toggle="tooltip" data-placement="top" title="Twitter"><span class="fa fa-twitter"></span></a></li>
- <li class="ftco-animate"><a href="https://www.facebook.com/officialTIET/" data-toggle="tooltip" data-placement="top" title="Facebook"><span class="fa fa-facebook"></span></a></li>
-<li class="ftco-animate"><a href="https://www.instagram.com/tietofficial/?hl=en" data-toggle="tooltip" data-placement="top" title="Instagram"><span class="fa fa-instagram"></span></a></li>
-<!-- thapar link -->
-<li class="ftco-animate"><a href="http://www.thapar.edu/" data-toggle="tooltip" data-placement="top" title="Thapar Homepage"><span class="fa fa-home"></span></a></li>
-</ul>
-</div>
+    </div>
+  </section>
+  <footer class="footer">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6 col-lg-3 mb-4 mb-md-0">
+          <h2 class="footer-heading">Thapar Unversity</h2>
+          <p>The Thapar Institute of Engineering and Technology (TIET) is one of India's oldest and finest educational
+            institutions, which provides a steady source of highly skilled talent to the nation as well as overseas.</p>
+          <ul class="ftco-footer-social p-0">
+            <li class="ftco-animate"><a
+                href="https://twitter.com/TIETofficial?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor"
+                data-toggle="tooltip" data-placement="top" title="Twitter"><span class="fa fa-twitter"></span></a></li>
+            <li class="ftco-animate"><a href="https://www.facebook.com/officialTIET/" data-toggle="tooltip"
+                data-placement="top" title="Facebook"><span class="fa fa-facebook"></span></a></li>
+            <li class="ftco-animate"><a href="https://www.instagram.com/tietofficial/?hl=en" data-toggle="tooltip"
+                data-placement="top" title="Instagram"><span class="fa fa-instagram"></span></a></li>
+            <!-- thapar link -->
+            <li class="ftco-animate"><a href="http://www.thapar.edu/" data-toggle="tooltip" data-placement="top"
+                title="Thapar Homepage"><span class="fa fa-home"></span></a></li>
+          </ul>
+        </div>
 
-<div class="col-md-6 col-lg-3 mb-4 mb-md-0">
- </div>
+        <div class="col-md-6 col-lg-3 mb-4 mb-md-0">
+        </div>
 
-<div class="col-md-6 col-lg-3 pl-lg-5 mb-4 mb-md-0">
-</div>
+        <div class="col-md-6 col-lg-3 pl-lg-5 mb-4 mb-md-0">
+        </div>
 
-<div class="col-md-6 col-lg-3 mb-4 mb-md-0">
+        <div class="col-md-6 col-lg-3 mb-4 mb-md-0">
 
-<h2 class="footer-heading">Quick Links</h2>
-<ul class="list-unstyled">
-<li><a href="#" class="py-2 d-block">Home</a></li>
-<li><a href="#" class="py-2 d-block">Engineering Streams</a></li>
-<li><a href="#" class="py-2 d-block">Meet Thapar Alumni</a></li>
-<li><a href="#" class="py-2 d-block">Gallery</a></li>
-<li><a href="#" class="py-2 d-block">FAQ's</a></li>
-<li><a href="#" class="py-2 d-block">HelpContact</a></li>
-</ul>
+          <h2 class="footer-heading">Quick Links</h2>
+          <ul class="list-unstyled">
+            <li><a href="#" class="py-2 d-block">Home</a></li>
+            <li><a href="#" class="py-2 d-block">Engineering Streams</a></li>
+            <li><a href="#" class="py-2 d-block">Meet Thapar Alumni</a></li>
+            <li><a href="#" class="py-2 d-block">Gallery</a></li>
+            <li><a href="#" class="py-2 d-block">FAQ's</a></li>
+            <li><a href="#" class="py-2 d-block">HelpContact</a></li>
+          </ul>
 
 
-</div>
-<div class="row mt-5">
-<div class="col-md-12 text-center" style="padding-left:450px;">
-<p class="copyright">
-Copyright &copy;<script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script type="7fcabe0204b65ee20594bff5-text/javascript">document.write(new Date().getFullYear());</script> All rights reserved 
-</p>
-</div>
-</div>
-</div>
-</footer>
+        </div>
+        <div class="row mt-5">
+          <div class="col-md-12 text-center" style="padding-left:450px;">
+            <p class="copyright">
+              Copyright &copy;
+              <script data-cfasync="false"
+                src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
+              <script type="7fcabe0204b65ee20594bff5-text/javascript">document.write(new Date().getFullYear());</script>
+              All rights reserved
+            </p>
+          </div>
+        </div>
+      </div>
+  </footer>
 
-<div id="ftco-loader" class="show fullscreen"><svg class="circular" width="48px" height="48px"><circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee" /><circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10" stroke="#F96D00" /></svg></div>
-<script src="js/jquery.min.js" type="7fcabe0204b65ee20594bff5-text/javascript"></script>
-<script src="js/jquery-migrate-3.0.1.min.js" type="7fcabe0204b65ee20594bff5-text/javascript"></script>
-<script src="js/popper.min.js" type="7fcabe0204b65ee20594bff5-text/javascript"></script>
-<script src="js/bootstrap.min.js" type="7fcabe0204b65ee20594bff5-text/javascript"></script>
-<script src="js/jquery.easing.1.3.js" type="7fcabe0204b65ee20594bff5-text/javascript"></script>
-<script src="js/jquery.waypoints.min.js" type="7fcabe0204b65ee20594bff5-text/javascript"></script>
-<script src="js/jquery.stellar.min.js" type="7fcabe0204b65ee20594bff5-text/javascript"></script>
-<script src="js/jquery.animateNumber.min.js" type="7fcabe0204b65ee20594bff5-text/javascript"></script>
-<script src="js/bootstrap-datepicker.js" type="7fcabe0204b65ee20594bff5-text/javascript"></script>
-<script src="js/jquery.timepicker.min.js" type="7fcabe0204b65ee20594bff5-text/javascript"></script>
-<script src="js/owl.carousel.min.js" type="7fcabe0204b65ee20594bff5-text/javascript"></script>
-<script src="js/jquery.magnific-popup.min.js" type="7fcabe0204b65ee20594bff5-text/javascript"></script>
-<script src="js/scrollax.min.js" type="7fcabe0204b65ee20594bff5-text/javascript"></script>
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false" type="7fcabe0204b65ee20594bff5-text/javascript"></script>
-<script src="js/google-map.js" type="7fcabe0204b65ee20594bff5-text/javascript"></script>
-<script src="js/main.js" type="7fcabe0204b65ee20594bff5-text/javascript"></script>
+  <div id="ftco-loader" class="show fullscreen"><svg class="circular" width="48px" height="48px">
+      <circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee" />
+      <circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10"
+        stroke="#F96D00" /></svg></div>
+  <script src="js/jquery.min.js" type="7fcabe0204b65ee20594bff5-text/javascript"></script>
+  <script src="js/jquery-migrate-3.0.1.min.js" type="7fcabe0204b65ee20594bff5-text/javascript"></script>
+  <script src="js/popper.min.js" type="7fcabe0204b65ee20594bff5-text/javascript"></script>
+  <script src="js/bootstrap.min.js" type="7fcabe0204b65ee20594bff5-text/javascript"></script>
+  <script src="js/jquery.easing.1.3.js" type="7fcabe0204b65ee20594bff5-text/javascript"></script>
+  <script src="js/jquery.waypoints.min.js" type="7fcabe0204b65ee20594bff5-text/javascript"></script>
+  <script src="js/jquery.stellar.min.js" type="7fcabe0204b65ee20594bff5-text/javascript"></script>
+  <script src="js/jquery.animateNumber.min.js" type="7fcabe0204b65ee20594bff5-text/javascript"></script>
+  <script src="js/bootstrap-datepicker.js" type="7fcabe0204b65ee20594bff5-text/javascript"></script>
+  <script src="js/jquery.timepicker.min.js" type="7fcabe0204b65ee20594bff5-text/javascript"></script>
+  <script src="js/owl.carousel.min.js" type="7fcabe0204b65ee20594bff5-text/javascript"></script>
+  <script src="js/jquery.magnific-popup.min.js" type="7fcabe0204b65ee20594bff5-text/javascript"></script>
+  <script src="js/scrollax.min.js" type="7fcabe0204b65ee20594bff5-text/javascript"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"
+    type="7fcabe0204b65ee20594bff5-text/javascript"></script>
+  <script src="js/google-map.js" type="7fcabe0204b65ee20594bff5-text/javascript"></script>
+  <script src="js/main.js" type="7fcabe0204b65ee20594bff5-text/javascript"></script>
 
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-23581568-13" type="7fcabe0204b65ee20594bff5-text/javascript"></script>
-<script type="7fcabe0204b65ee20594bff5-text/javascript">
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-23581568-13"
+    type="7fcabe0204b65ee20594bff5-text/javascript"></script>
+  <script type="7fcabe0204b65ee20594bff5-text/javascript">
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
   gtag('config', 'UA-23581568-13');
 </script>
-<script src="https://ajax.cloudflare.com/cdn-cgi/scripts/7089c43e/cloudflare-static/rocket-loader.min.js" data-cf-settings="7fcabe0204b65ee20594bff5-|49" defer=""></script><script defer src="https://static.cloudflareinsights.com/beacon.min.js" data-cf-beacon='{"rayId":"5d06b9d2add2017a","version":"2020.9.0","si":10}'></script>
+  <script src="https://ajax.cloudflare.com/cdn-cgi/scripts/7089c43e/cloudflare-static/rocket-loader.min.js"
+    data-cf-settings="7fcabe0204b65ee20594bff5-|49" defer=""></script>
+  <script defer src="https://static.cloudflareinsights.com/beacon.min.js"
+    data-cf-beacon='{"rayId":"5d06b9d2add2017a","version":"2020.9.0","si":10}'></script>
 </body>
+
 </html>
