--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
           </div>
         </div>
 
-        <div class="col-md-3 d-flex align-self-stretch px-4 ftco-animate">
+        <!-- <div class="col-md-3 d-flex align-self-stretch px-4 ftco-animate">
           <div class="d-block services text-center">
             <div class="icon d-flex align-items-center justify-content-center">
               <img src="images/help.png" style="width:140%;">
@@ -204,7 +204,7 @@
                   class="fa fa-chevron-right"></span><i class="sr-only">Read more</i></a>
             </div>
           </div>
-        </div>
+        </div> -->
 
       </div>
     </div>
