--- a/alumni.html
+++ b/alumni.html
@@ -34,7 +34,7 @@
            <li class="nav-item"><a href="placement.html" class="nav-link">Placements</a></li>
 
           <li class="nav-item"><a href="gallery.html" class="nav-link">Gallery</a></li>
-          <li class="nav-item"><a href="faqs.html" class="nav-link">FAQ's</a></li>
+          <!-- <li class="nav-item"><a href="faqs.html" class="nav-link">FAQ's</a></li> -->
           <!-- <li class="nav-item"><a href="contact.html" class="nav-link">Help</a></li> -->
         </ul>
       </div>
@@ -368,7 +368,7 @@ Deutsche Bank</p>
     <tr>
       <th scope="row">2:00-3:00 PM</th>
       <td>Electronics ,Electrical, Instrumentation</td>
-      <td>Rachna, Jyotsna, Chaman</td>
+      <td>Jyotsna, Chaman</td>
       <td>@twitter</td>
        <td>Mansi</td>
     </tr>
