--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
           <li class="nav-item active"><a href="index.html" class="nav-link">Home</a></li>
           <li class="nav-item"><a href="streams.html" class="nav-link">Engineering Streams</a></li>
 
-          <li class="nav-item"><a href="alumni.html" class="nav-link">Meet Thapar Alumni</a></li>
+          <li class="nav-item"><a href="alumni.html" class="nav-link">Sessions by Alumni</a></li>
           <li class="nav-item"><a href="placement.html" class="nav-link">Placements</a></li>
 
 
@@ -183,28 +183,28 @@
               <p><a href="#" onclick="lightbox_open();" class="btn btn-primary mr-md-4 py-3 px-4"
                   style="margin-top: 90px;">Watch
                   Video<span class="ion-ios-arrow-forward"></span></a></p>
-              <a href="pricing.html" class="btn-custom d-flex align-items-center justify-content-center"><span
+              <a href="gallery.html" class="btn-custom d-flex align-items-center justify-content-center"><span
                   class="fa fa-chevron-right"></span><i class="sr-only">Read more</i></a>
             </div>
           </div>
         </div>
 
-        <!-- <div class="col-md-3 d-flex align-self-stretch px-4 ftco-animate">
+        <div class="col-md-3 d-flex align-self-stretch px-4 ftco-animate">
           <div class="d-block services text-center">
             <div class="icon d-flex align-items-center justify-content-center">
               <img src="images/help.png" style="width:140%;">
             </div>
             <div class="media-body">
-              <h3 class="heading">HELP DESK</h3>
-              <p style="font-weight: bold;">WE ARE HERE TO HELP YOU</p>
-              <p>Have any doubts regarding the courses?</p>
-              <p><a href="contact.html" class="btn btn-primary mr-md-4 py-3 px-4">Contact Help Desk<span
+              <h3 class="heading">Placements</h3>
+              <p style="font-weight: bold;">Know more about data-placement at Thapar</p>
+              <p>Have any doubts regarding the placements?</p>
+              <p><a href="placement.html" class="btn btn-primary mr-md-4 py-3 px-4">Contact Help Desk<span
                     class="ion-ios-arrow-forward"></span></a></p>
-              <a href="contact.html" class="btn-custom d-flex align-items-center justify-content-center"><span
+              <a href="placement.html" class="btn-custom d-flex align-items-center justify-content-center"><span
                   class="fa fa-chevron-right"></span><i class="sr-only">Read more</i></a>
             </div>
           </div>
-        </div> -->
+        </div>
 
       </div>
     </div>
