--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
               <h3 class="heading">Placements</h3>
               <p style="font-weight: bold;">Know more about data-placement at Thapar</p>
               <p>Have any doubts regarding the placements?</p>
-              <p><a href="placement.html" class="btn btn-primary mr-md-4 py-3 px-4">Contact Help Desk<span
+              <p><a href="placement.html" class="btn btn-primary mr-md-4 py-3 px-4">Contact Placements<span
                     class="ion-ios-arrow-forward"></span></a></p>
               <a href="placement.html" class="btn-custom d-flex align-items-center justify-content-center"><span
                   class="fa fa-chevron-right"></span><i class="sr-only">Read more</i></a>
