--- a/index.html
+++ b/index.html
@@ -524,7 +524,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-6 col-lg-3 mb-4 mb-md-0">
-          <h2 class="footer-heading">Thapar Unversity</h2>
+          <h2 class="footer-heading">Thapar Institute</h2>
           <p>The Thapar Institute of Engineering and Technology (TIET) is one of India's oldest and finest educational
             institutions, which provides a steady source of highly skilled talent to the nation as well as overseas.</p>
           <ul class="ftco-footer-social p-0">
