--- a/index.html
+++ b/index.html
@@ -553,10 +553,8 @@
           <ul class="list-unstyled">
             <li><a href="#" class="py-2 d-block">Home</a></li>
             <li><a href="#" class="py-2 d-block">Engineering Streams</a></li>
-            <li><a href="#" class="py-2 d-block">Meet Thapar Alumni</a></li>
+            <li><a href="#" class="py-2 d-block">Sessions by our Thapar Alumni</a></li>
             <li><a href="#" class="py-2 d-block">Gallery</a></li>
-            <li><a href="#" class="py-2 d-block">FAQ's</a></li>
-            <li><a href="#" class="py-2 d-block">HelpContact</a></li>
           </ul>
 
 
