--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
                     <div class="user-img" style="background-image: url(images/ele.png)"></div>
                     <div class="pl-3">
                       <p class="name">Dr. R. S. Kaler</p>
-                      <span class="position">HOD,ELE</span>
+                      <span class="position">HOD, ELED</span>
                     </div>
                   </div>
                 </div>
@@ -386,7 +386,7 @@
                     <div class="user-img" style="background-image: url(images/che.jpg)"></div>
                     <div class="pl-3">
                       <p class="name">Dr. Haripada Bhunia</p>
-                      <span class="position">HOD,CHE</span>
+                      <span class="position">HOD, CHED</span>
                     </div>
                   </div>
                 </div>
@@ -404,7 +404,7 @@
                     <div class="user-img" style="background-image: url(images/bio.jpg)"></div>
                     <div class="pl-3">
                       <p class="name">Prof. M. S. Reddy</p>
-                      <span class="position">HOD,BTD</span>
+                      <span class="position">HOD, BTD</span>
                     </div>
                   </div>
                 </div>
@@ -422,7 +422,7 @@
                     <div class="user-img" style="background-image: url(images/mech.jpg)"></div>
                     <div class="pl-3">
                       <p class="name">Dr. T.P. Singh</p>
-                      <span class="position">HOD,MED</span>
+                      <span class="position">HOD, MED</span>
                     </div>
                   </div>
                 </div>
@@ -440,7 +440,7 @@
                     <div class="user-img" style="background-image: url(images/cse.jpg)"></div>
                     <div class="pl-3">
                       <p class="name">Dr. Maninder Singh</p>
-                      <span class="position">HOD,CSE</span>
+                      <span class="position">HOD, CSED</span>
                     </div>
                   </div>
                 </div>
